--- a/styleDesafio.css
+++ b/styleDesafio.css
@@ -26,7 +26,8 @@ header
     min-width: 250px;
     width: 100%;
     height: 100px;
-    margin-top: -1.5%;     
+    margin-top: -1.5%;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.486);     
 
 }
 
@@ -53,7 +54,7 @@ div.bloco
     width: 96%;
     height: 250px;
     margin-left: 2%;
-    background-color: var(--corFrames);
+    background-color: #35b0b0c5;
 
 }
 
@@ -68,6 +69,7 @@ div.resume
     margin-bottom: 8px;
     background-color: var(--corFrames);
     border-radius: 20px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.486); 
 }
 
 div.article
@@ -78,8 +80,9 @@ div.article
     margin-left: 0%;        
     margin-top: 8%;
     margin-bottom: 8px;
-    background-color: var(--corFrames);
-    border-radius: 20px;
+    background-color: none;
+    
+    
 }
 
 
@@ -95,10 +98,11 @@ div.article
         height: 766px;
         margin-left: 1%;
         margin-right: 2%;
-        margin-top: 1%;
-        margin-bottom: 8px;
+        margin-top: 3%;
+        margin-bottom: 0px;
         background-color: var(--corFrames);
         border-radius: 20px;
+        box-shadow: black;
     }
 
     div.article
@@ -106,11 +110,13 @@ div.article
         float: left;
         width: 63.5%;
         height: 766px;
-        margin-left: 0%;        
-        margin-top: 1%;
-        margin-bottom: 8px;
-        background-color: var(--corFrames);
-        border-radius: 20px;
+        margin-left: 1%;
+        margin-right: 3%;        
+        margin-top: 8%;
+        margin-bottom: 0px;
+        background-color: none;
+       
+        
     }
 }
 
