--- a/styleDesafio.css
+++ b/styleDesafio.css
@@ -25,7 +25,7 @@ header
     max-width: 1800px;
     min-width: 250px;
     width: 100%;
-    height: 100px;
+    height: 180px;
     margin-top: -1.5%;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.486);     
 
@@ -61,12 +61,12 @@ div.bloco
 div.resume
 {
     float: left;
-    width: 37%;
-    height: 2566px;
+    width: 96%;
+    height: 866px;
     margin-left: 1%;
     margin-right: 2%;
-    margin-top: 8%;
-    margin-bottom: 8px;
+    margin-top: 28%;
+    margin-bottom: 2px;
     background-color: var(--corFrames);
     border-radius: 20px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.486); 
@@ -74,22 +74,60 @@ div.resume
 
 div.article
 {
+    
     float: left;
-    width: 60%;
+    width: 96%;
     height: 2566px;
     margin-left: 0%;        
     margin-top: 8%;
-    margin-bottom: 8px;
-    background-color: none;
-    
+    margin-bottom: -690px;
+    background-color: none;    
     
 }
 
+div.line
+{
+    
+    display: inline-block;
+    margin-left: 25%;
+    margin-top: -13px;
+    
 
+}
 
+img#cplus
+{
+
+    padding-left: 36px;
+    padding-top: 25px;
+}
+
+img#html
+{
+    padding-left: 36px;
+    padding-top: 25px;
+}
+
+p.projects
+{
+    padding-left: 36px;
+}
 
 @media only screen and (min-width: 769px)
 {
+
+    header
+{
+    
+    background-color: var(--corFrames);
+    max-width: 1800px;
+    min-width: 250px;
+    width: 100%;
+    height: 100px;
+    margin-top: -1.5%;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.486);     
+
+}
 
     div.resume
     {
